Fix review page on mobile devices

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -624,27 +624,28 @@ input[type=radio]:checked ~ span {
     color: #738694;
     font-size: 14px;
     font-weight: 900;
-    padding-left: 15px;
     margin-top: 5px;
     padding-bottom: 15px;
 }
 
 .reviews-btn{
     display: flex;
+    line-height: 100%;
     justify-content: space-between;
 }
 
 .btn-all-reviews{
-    color: #fff;
-    background-color: red;
-    border-radius: 2px;
-    margin-top: 16.8px;
-    margin-bottom: 16.8px;
-    padding: 5px 29px 5px 29px;
-    transition: 0.2s linear;
-    font-weight: 600;
-    font-size: 14px;
-    border: 2px solid red;
+        color: #fff;
+        background-color: red;
+        border-radius: 2px;
+        margin-top: 16.8px;
+        margin-bottom: 16.8px;
+        padding: 5px 29px 5px 29px;
+        transition: 0.2s linear;
+        font-weight: 600;
+        font-size: 14px;
+        border: 2px solid red;
+        text-align: center;
 
 }
 
@@ -1089,6 +1090,13 @@ input[type="radio"]:checked + .checkbox-image {
     display: none;
 }
 
+.review-btn-container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .review-btn-send{
     color: #fff;
     background-color: red;
@@ -1250,6 +1258,10 @@ input[type="radio"]:checked + .checkbox-image {
         color: #738694;
     }
 
+    .reviews-btn h4{
+        font-size: 40px;
+    }
+
 }
 
 
@@ -1336,6 +1348,20 @@ input[type="radio"]:checked + .checkbox-image {
     .food-card{
         width: 40%;
     }
+
+    .reviews-btn{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .reviews-btn h4{
+        display: inline-block;
+        font-size: 35px;
+        text-align: center;
+        vertical-align: center;
+        line-height: normal;
+
+    }
 }
 
 @media (max-width: 682px) {
@@ -1348,7 +1374,8 @@ input[type="radio"]:checked + .checkbox-image {
     }
     .review-intro-container{
         width: 90%;
-        display: block;
+        display: flex;
+        flex-direction: column;
         margin: auto;
     }
 
@@ -1364,6 +1391,9 @@ input[type="radio"]:checked + .checkbox-image {
     .review-intro-container *:last-child{
         margin-left: auto;
         margin-right: auto;
+    }
+    .page-title{
+        width: 80%;
     }
 }
 
@@ -1451,6 +1481,11 @@ input[type="radio"]:checked + .checkbox-image {
         padding-right: 0;
     }
 
+    .reviews-btn{
+        display: flex;
+        flex-direction: column;
+    }
+
     .btn-all-reviews{
         margin-bottom: 10px;
 
@@ -1520,4 +1555,24 @@ input[type="radio"]:checked + .checkbox-image {
     .review-form-border{
         width: 90%;
     }
+    .review-form-input-container{
+        display: flex;
+        height: 150px;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .review-form-input{
+        width: 100%;
+    }
+
+    .review-btn-send{
+        padding: 6px 50px 6px 50px;
+
+    }
+
+    .page-title{
+        width: 60%;
+    }
+
 }
